--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="lib/junit.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jpl.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/pellet.jar"/>
@@ -17,6 +16,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/log4j-1.2.15.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/postgresql-8.2-506.jdbc3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/owlapi-mansyntaxparser.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/bbop.jar" sourcepath="/BBOP"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/relaxngDatatype.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/resolver.jar"/>
@@ -24,7 +24,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/xercesImpl.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xml-apis.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xsdlib-1.5.jar"/>
-	<classpathentry kind="lib" path="lib/owlapi-bin.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/BBOP"/>
+	<classpathentry exported="true" kind="lib" path="lib/owlapi-bin.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/JVM 1.5"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
