--- a/build.xml
+++ b/build.xml
@@ -107,4 +107,63 @@
 		<delete dir="${apidoc_dest}" />
 	</target>
 
+        <!-- For running JUnit tests (added 3/1/10) -->
+        <property name="src" value="./src"/>
+        <property name="lib" value="lib"/>
+        <property name="classes" value="classes"/>
+
+        <!-- terse FAIL or PASS -->
+	<target name="test" depends="classes" description="Unit tests">
+	  <junit fork="yes" printsummary="on" maxmemory="1048m">
+	    <classpath>
+              <!-- Need this because the test classes aren't in the jar -->
+              <pathelement path="${classes}"/>
+              <fileset dir="${lib}">
+                <include name="*.jar"/>
+                <exclude name="obo.jar"/>
+              </fileset>
+            </classpath>
+	    <batchtest>
+	      <fileset dir="${src}">
+                <include name="**/test/**"/>
+              </fileset>
+	    </batchtest>
+	  </junit>
+	</target>
+
+        <!-- prints to stdout all messages -->
+	<target name="verbose-test" depends="classes" description="Unit tests">
+	  <junit fork="yes" printsummary="withOutAndErr" maxmemory="1024m">
+	    <classpath>
+              <!-- Need this because the test classes aren't in the jar -->
+              <pathelement path="${classes}"/>
+              <fileset dir="${lib}">
+                <include name="*.jar"/>
+                <exclude name="obo.jar"/>
+              </fileset>
+            </classpath>
+	    <batchtest>
+	      <fileset dir="${src}">
+                <include name="**/test/**"/>
+              </fileset>
+	    </batchtest>
+	  </junit>
+	</target>
+	
+        <!-- set var junit.test.class.name from cmd line for example:
+             ant runatest -Djunit.test.class.name="phenote.servlet.ControllerTest"-->
+	<target name="runatest" depends="classes">
+	  <junit fork="yes" printsummary="withOutAndErr" maxmemory="1024m" showoutput="true">
+	    <classpath>
+              <!-- Need this because the test classes aren't in the jar -->
+              <pathelement path="${classes}"/>
+              <fileset dir="${lib}">
+                <include name="*.jar"/>
+                <exclude name="obo.jar"/>
+              </fileset>
+            </classpath>
+	    <test name="${junit.test.class.name}"/>
+	  </junit>
+ 	</target>
+
 </project>
