Added timeouts for tests (10 minutes)
git-svn-id: svn://svn.code.sf.net/p/geneontology/svn/java/obo/trunk@2647 6f0e8829-b336-0410-acfb-cb9b228023ad

--- a/build.xml
+++ b/build.xml
@@ -114,7 +114,7 @@
 
         <!-- terse FAIL or PASS -->
 	<target name="test" depends="classes" description="Unit tests">
-	  <junit fork="yes" printsummary="on" maxmemory="1048m">
+	  <junit fork="yes" printsummary="on" maxmemory="1048m" timeout="600000">
 	    <classpath>
               <!-- Need this because the test classes aren't in the jar -->
               <pathelement path="${classes}"/>
@@ -153,7 +153,7 @@
         <!-- set var junit.test.class.name from cmd line for example:
              ant runatest -Djunit.test.class.name="phenote.servlet.ControllerTest"-->
 	<target name="runatest" depends="classes">
-	  <junit fork="yes" printsummary="withOutAndErr" maxmemory="1024m" showoutput="true">
+	  <junit fork="yes" printsummary="withOutAndErr" maxmemory="1024m" showoutput="true" timeout="600000">
 	    <classpath>
               <!-- Need this because the test classes aren't in the jar -->
               <pathelement path="${classes}"/>
