git-svn-id: svn://svn.code.sf.net/p/geneontology/svn/java/obo/trunk@3413 6f0e8829-b336-0410-acfb-cb9b228023ad

--- a/build.xml
+++ b/build.xml
@@ -63,7 +63,7 @@
 
 	</target>
 
-	<target name="backward_compatible_classes" depends="clean, buildbbop, resources">
+	<target name="backward_compatible_classes" depends="buildbbop, resources">
 		<mkdir dir="${outputdir}" />
 		<javac srcdir="${sourcedir}" destdir="${outputdir}" target="1.5" debug="true">
 			<classpath>
