Build bbop (if needed) as a backwards-compatible jar
git-svn-id: svn://svn.code.sf.net/p/geneontology/svn/java/obo/trunk@3814 6f0e8829-b336-0410-acfb-cb9b228023ad

--- a/build.xml
+++ b/build.xml
@@ -43,7 +43,7 @@
 	</target>
 
 	<target name="buildbbop" if="bbop_dest">
-		<ant dir="${bbop_dest}" target="jar" inheritAll="false"/>
+		<ant dir="${bbop_dest}" target="backward_compatible_jar" inheritAll="false"/>
 		<copy file="${bbop_dest}/bbop.jar" todir="${librarydir}"/>
 	</target>
 	
