--- a/.classpath
+++ b/.classpath
@@ -8,14 +8,14 @@
 	<classpathentry exported="true" kind="lib" path="lib/jena.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/arq.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/hsqldb.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/owlapi-apibinding.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/oboformat-0.5.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/owlapi-3.2.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang-2.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/antlr-runtime-3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/log4j-1.2.15.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/postgresql-8.2-506.jdbc3.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/owlapi-mansyntaxparser.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/bbop.jar" sourcepath="/BBOP"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/relaxngDatatype.jar"/>
@@ -24,7 +24,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/xercesImpl.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xml-apis.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xsdlib-1.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/owlapi-bin.jar"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/JVM 1.5"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
