update obo2owl library
git-svn-id: svn://svn.code.sf.net/p/geneontology/svn/java/obo/trunk@4536 6f0e8829-b336-0410-acfb-cb9b228023ad

--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/jena.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/arq.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/hsqldb.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/oboformat-0.5.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/owlapi-3.2.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang-2.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/antlr-runtime-3.0.jar"/>
@@ -25,5 +24,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/xml-apis.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xsdlib-1.5.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
+	<classpathentry kind="lib" path="lib/oboformat-0.5.2.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
